# mytcas_dash

./: .env.example  .gitignore  README.md  pyproject.toml
cleaning/: data_cleaning.ipynb  data_with_coordinates.csv
dashapp/: app.py
dashapp/assets/: ืstyles.css
dashapp/callbacks/: api.py  callbacks.py
dashapp/components/: footer.py  navbar.py
dashapp/pages/: about.py  home.py
data/: all_universities_data.json  cleaned_universities_data.csv  cleaned_universities_data.json
scraping/: scriping.ipynb
scripts/: run-app.sh
